--- a/views/teams/show.ejs
+++ b/views/teams/show.ejs
@@ -5,5 +5,6 @@
 	<p>
 	  <%= team.members %>
 	</p>
+    <a class="edit-team btn btn-warning" href="/teams/edit/<%=team.name%>">Edit</a>
     <a class="delete-team btn btn-danger" href="/teams/<%=team.name%>">Delete</a>
 </div>
